infra/frontro/blazn-test/networkpolicy-storage-from-sandbox-controller.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: storage-from-sandbox-controller
  namespace: blazn-test
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: blazn-poc-system
      podSelector:
        matchLabels:
          app.kubernetes.io/name: blazn-sandbox-controller
    ports:
    - port: 9000
      protocol: TCP
  podSelector:
    matchLabels:
      app: objectstore
  policyTypes:
  - Ingress
